Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-12401

[R] Fix guard around dataset___Scanner__TakeRows

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • None
    • 4.0.0
    • R

    Description

      ARROW-11797 / #9589 wrapped a Dataset-dependent function definition in #if defined(ARROW_R_WITH_ARROW)  instead of #if defined(ARROW_R_WITH_DATASET), causing R minimal builds to fail

      https://github.com/apache/arrow/commit/d575858e8ff847e8d4e7b6c121e8041cbe2b93c2#diff-f6ded32632f8b1516f0e852b8e648af02be39e60010c546a17502d1830245076R2085

       

      Attachments

        Issue Links

          Activity

            People

              icook Ian Cook
              icook Ian Cook
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m