ARROW-12401: [R] Fix guard around dataset___Scanner__TakeRows

Closes #10051 from ianmcook/ARROW-12401

Authored-by: Ian Cook <ianmcook@gmail.com>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>